refactor: organização de arquivos

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
         "unistd.h": "c",
         "fcntl.h": "c",
         "string.h": "c",
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "termios.h": "c",
+        "stdio.h": "c"
     }
 }
