cria função de apagar cronograma

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,8 @@
         "validations.h": "c",
         "login.h": "c",
         "errors.h": "c",
-        "helper.h": "c"
+        "helper.h": "c",
+        "cronogram.h": "c",
+        "materies.h": "c"
     }
 }
