feature: criação de função para seleção de matéria

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,9 @@
         "errors.h": "c",
         "helper.h": "c",
         "cronogram.h": "c",
-        "materies.h": "c"
+        "materies.h": "c",
+        "study.h": "c",
+        "system_error": "c",
+        "stdbool.h": "c"
     }
 }
