Corrige pequenas falhas no sistema

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,7 +14,8 @@
     "helper.h": "c",
     "cronogram.h": "c",
     "materies.h": "c",
-    "conio.h": "c"
+    "conio.h": "c",
+    "typeinfo": "c"
   },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
