--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,8 @@
     "cronogram.h": "c",
     "materies.h": "c",
     "conio.h": "c",
-    "typeinfo": "c"
+    "typeinfo": "c",
+    "stdbool.h": "c"
   },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
